updated background size to prevent pixelation on mobile devices

--- a/webpage-style.css
+++ b/webpage-style.css
@@ -2,7 +2,7 @@ body {
     background-image: url("img/background-xl-2.png");
     background-position: right;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto 1000px;
     background-attachment: fixed;
     margin: 0;
     padding: 0;
